src/containers/Storage/Pdisk/Pdisk.scss
.pdisk-storage {
    position: relative;

    min-width: 120px;

    border-radius: 4px; // to match interactive area with disk shape

    &__content {
        border-radius: 4px; // to match interactive area with disk shape
    }

    &__popup-wrapper {
        padding: 12px;
    }

    &__media-type {
        position: absolute;
        top: 0;
        right: 4px;

        font-size: var(--yc-text-body-1-font-size);

        color: var(--yc-color-text-secondary);
    }
}

